--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,24 @@ body { margin: 2em; }
 body, input[text], button { color: #888; font-family: Cambria, Georgia; }
 button { padding: 0.2em; font-size: 14px}
 * { font-family: Arial; }
+
+section {
+  background: #f7f7f7;
+  border-radius: 3px;
+  text-align: center;
+  margin: 1em;
+  position: relative !important;
+  padding-bottom: 10px; }
+  section [md-button], section [md-raised-button], section [md-fab] {
+    margin-top: 16px;
+    margin-bottom: 16px; }
+
+md-content {
+  margin-right: 7px; }
+
+.label {
+  position: absolute;
+  bottom: 5px;
+  left: 7px;
+  font-size: 14px;
+  opacity: 0.54; }
