Adding little kitty

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,8 +2,8 @@
   <nav>
     <a [routerLink]="['Dashboard']">Dashboard</a>
     <a [routerLink]="['Heroes']">Heroes</a>
-<!--     <a [routerLink]="['Select']">Select</a>
- -->  </nav>
+    <a [routerLink]="['Select']">Select</a>
+  </nav>
   <router-outlet></router-outlet>
 
   <md-content>
